<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvPersonal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/personal"
        android:textColor="@color/colorBlack"
        android:background="@color/colorLightGreen"
        android:textAppearance="?android:textAppearanceMedium"
        android:gravity="left"/>

    <LinearLayout
        android:id="@+id/llPersonalInfo"
        android:layout_width="match_parent"
        android:layout_height="186dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="39dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvPersonalQues"
            android:layout_width="111dp"
            android:layout_height="match_parent"
            android:text="@string/PersonalQues"
            android:textColor="@color/colorBlack" />

        <TextView
            android:id="@+id/tvPersonalAns"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:text="@string/PersonalAns"
            android:textAlignment="viewStart"
            android:textColor="@color/colorBlack" />


    </LinearLayout>

    <TextView
        android:id="@+id/tvAcademic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorLightGreen"
        android:textColor="@color/colorBlack"
        android:text="@string/academic"
        android:layout_below="@id/llPersonalInfo"
        android:layout_marginTop="@dimen/activity_vertical_margin" />
    <LinearLayout
        android:id="@+id/llacademic"
        android:layout_below="@id/tvAcademic"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tvhighedu"
            android:text="@string/academicQA"
            android:textColor="@color/colorBlack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tvlowedu"
            android:text="@string/academicA"
            android:layout_below="@+id/tvhighedu"
            android:textColor="@color/colorBlack"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />























        </LinearLayout>



















</RelativeLayout>